--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -16,7 +16,7 @@
                 <a class="nav-link" href="/saved">Saved Articles</a>
             </li>
             <li class="nav-item">
-                <a class="btn btn-danger clear">CLEAR ARTICLES!</a>
+                <a class="btn btn-danger clear-saved">CLEAR ARTICLES!</a>
             </li>
         </ul>
     </div>
@@ -45,6 +45,39 @@
         <div class="card-body">{{summary}}</div>
     </div>
     {{/each}}
+</div>
+
+{{#unless savedArticles}}
+{{> emptySave}}
+{{/unless}}
+
+<!-- Modal -->
+<div class="modal fade" id="notesModal" tabindex="-1" role="dialog" aria-labelledby="notesModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="notesModalLabel">Notes for article:</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <ul class="comment-list"></ul>
+                <form>
+                    <div class="form-group">
+                        <label for="message-text" class="col-form-label">New Note:</label>
+                        <textarea class="form-control comment-text" id="message-text"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary save-btn" data-dismiss="modal"
+                    id="save-note">Save</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <footer class="footer">
